# SEC_Lab_02

./: README.md  sec_lab02_report.md
client/: Cargo.toml
client/src/: action.rs  authentication.rs  yubi.rs
protocol/: Cargo.toml
protocol/src/: argon2_config.rs  lib.rs  validator.rs
protocol/src/validator/: validate_email.rs  validate_password.rs
server/: Cargo.toml
server/src/: action.rs  authentication.rs  mailer.rs
