[package]
name = "client"
version = "0.2.0"
authors = ["SEC", "K-do"]
edition = "2021"

[dependencies]
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
strum = "0.20"
strum_macros = "0.20"
yubikey = "0.5"
lazy_static = "1.4.0"
fancy-regex = "0.10.0"
x509 = "0.2.0"
hex = "0.4.3"
base64 = "0.13.0"
argon2 = "0.4.0"
rand_core = { version = "0.6.3", features = ["std"] }
sha2 = "0.10.2"
hmac = "0.12.1"
protocol = { path = "../protocol" }

