[package]
name = "server"
version = "0.2.0"
authors = ["SEC", "K-do"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustbreak = { version = "2", features = ["ron_enc"] }
lazy_static = "1.4"
bincode = "1.3"
argon2 = "0.4.0"
rand_core = { version = "0.6.3", features = ["std"] }
sha2 = "0.10.2"
hmac = "0.12.1"
base64 = "0.13.0"
ecdsa = "0.14.1"
p256 = "0.11.0"
lettre = "0.10.0-rc.6"
protocol = { path = "../protocol" }
